--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ nav > ul > li > a:hover {
     border-radius: 1rem;
     top: 8%;
     right: 100px;
-    width: 250px;
+    width: 280px;
     visibility: hidden;
 }
 
@@ -149,6 +149,14 @@ nav > ul > li > a:hover {
     padding-top: 0.5rem;
     align-items: center;
     justify-content: space-between;
+}
+
+.empty {
+    color: var(--darkGrayishBlue);
+    display: none;
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 1rem;
 }
 
 .cart-item-img {
@@ -201,6 +209,7 @@ nav > ul > li > a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-height: 100%;
 }
 
 .carousel-container {
@@ -211,7 +220,7 @@ nav > ul > li > a:hover {
 .carousel-container img {
     width: 100%;
     border-radius: 10px;
-    cursor: pointer;
+    cursor: zoom-in;
     transition: 0.6s;
 
 }
@@ -251,6 +260,7 @@ nav > ul > li > a:hover {
     padding-left: 4rem;
     padding-top: 5rem;
     width : 50%;
+    min-height: 100%;
 }
 
 .company {
