--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 body {
     font-family: 'Kumbh Sans', 'Poppins', sans-serif;
     padding: 0 4rem;
-    min-height: 100vh;
+    max-height: 100vh;
 }
 
 header {
@@ -113,7 +113,7 @@ nav > ul > li > a:hover {
     border-radius: 1rem;
     top: 8%;
     right: 100px;
-    width: 280px;
+    width: 300px;
     visibility: hidden;
 }
 
@@ -201,7 +201,7 @@ nav > ul > li > a:hover {
 
 #hero {
     display: flex;
-    margin-top:  2 rem;
+    margin-top:  2rem;
 }
 
 #hero .left {
@@ -210,6 +210,7 @@ nav > ul > li > a:hover {
     flex-direction: column;
     align-items: center;
     max-height: 100%;
+    padding-top: 4rem;
 }
 
 .carousel-container {
@@ -219,9 +220,11 @@ nav > ul > li > a:hover {
 
 .carousel-container img {
     width: 100%;
-    border-radius: 10px;
+    margin-top: 1rem;
+    border-radius: 1rem;
     cursor: zoom-in;
     transition: 0.6s;
+    height: 520px;
 
 }
 
@@ -258,7 +261,7 @@ nav > ul > li > a:hover {
 
 #hero .right {
     padding-left: 4rem;
-    padding-top: 5rem;
+    padding-top: 8rem;
     width : 50%;
     min-height: 100%;
 }
@@ -268,12 +271,14 @@ nav > ul > li > a:hover {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 1.3rem;
+    margin-bottom: 1rem;
 }
 
 .title {
     width: 65%;
     letter-spacing: 2px;
     font-size: 2.5rem;
+    margin: 1rem 0;
 }
 
 .text {
@@ -286,7 +291,7 @@ nav > ul > li > a:hover {
 .pricing {
     /* padding-top: 1rem; */
     width: 75%;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
 }
 
 .price {
