--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,8 @@ nav > ul > li > a:hover {
     height: 540px;
 }
 
-.carousel-items {
+.carousel-items,
+#background .carousel-items {
     width: 75%;
     display: flex;
     justify-content: space-between;
@@ -235,25 +236,30 @@ nav > ul > li > a:hover {
     margin-top: 1rem;
 }
 
-.carousel-items > figure {
+.carousel-items > figure,
+#background .carousel-items > figure {
     border: 3px solid transparent;
     border-radius: 12px;
     cursor: pointer;
     overflow: hidden;
     height: 100px;
 }
-.carousel-items > figure > img {
+.carousel-items > figure > img,
+#background .carousel-items > figure > img {
     height: 100%;
     width: 100%;
 }
 
 .carousel-items > figure > img:hover,
-.carousel-items > figure > img.active {
+#background .carousel-items  figure  img:hover,
+.carousel-items > figure > img.active,
+#background .carousel-items figure > img.active {
     opacity: 0.40;
     transition: 0.3s;
 }
 
-.carousel-items > figure.active {
+.carousel-items > figure.active,
+#background .carousel-items  figure.active  {
     border-color: var(--orange);
 
 }
@@ -371,12 +377,21 @@ nav > ul > li > a:hover {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    bottom: 0;
+    height: 100vh;
     width: 100%;
     background: rgba(29, 32, 37, 0.7);
     z-index: 9999;
     display: none;
 }
+
+#background .container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 /** MEDIA QUERIES **/
 
